# BScProj2016

./: .gitignore  README.md  TODO.org  github-konton.md  instruktioner.md  referenser.md  tutorial-outline.md  welcome.md
Dokument/: .gitignore  Intro-avsnitt.md  README.md  TSS-avsnitt.md  planeringsrapport.tex
Dokument/Halvtidspresentation/: DSLsofMath.pptx  Manus mm.md
Dokument/Planeringsrapport/: Makefile  planeringsrapport.md  planeringsrapport.tex
Dokument/Rapport/: Makefile  Rapportstruktur.tex  glossaries-dictionary-Swedish.dict  glossaries-swedish-noenc.ldf  glossaries-swedish-utf8.ldf  glossaries-swedish.ldf  ordlista.tex  ordlista.tex.txt  rapport.acn  rapport.tex  readme  referenser.bib
Dokument/Rapport/Bilagor/: bilaga 3.tex
Dokument/Rapport/include/: ordlista.tex  referenser.bib
Dokument/Rapport/include/frontmatter/: Titlepage.tex
Dokument/Rapport/include/settings/: Settings.tex
Hemsida/: Fourier.html  Komplex.html  LTI.html  Signaler.html  alt(modal).html  index.html  readme.md
Hemsida/avsnitt/: Foruier.html  Introduktion.html  Komplexa tal & signaler.html  LTI.html
Hemsida/images/Signaler/: delta.eps  heavy.eps
Hemsida/includes/css/: styles.css
Hemsida/includes/js/: script.js
Tutorial/: ComplexNumbers.hs  ComplexNumbers.lhs  Komplexatalochsignaler.html  LTI.hs  Laplace.tex  Tutorial.cabal  ZTransform.tex  Ztransform.tex
Tutorial/ComplexNumbers/: Parse.lhs  Test.lhs
Tutorial/Images/: delta.eps  heavy.eps  shiftedHeavy.eps  smoothie.eps
Tutorial/Kod/: ComplexNumbers.hs  ComplexNumbers.lhs  Expression.hs  FourierTransform.hs  FunNumInst.hs  LTI.hs  Polynomials.lhs  Signals.hs  Tutorial.cabal
Tutorial/Kod/ComplexNumbers/: Parse.lhs  Test.lhs
Tutorial/Kod/FourierTransform/: Test.hs
Tutorial/Kod/Kodpaket till studenterna/Avsnitt 1/: ComplexNumbers.hs  Expression.hs  Signals.hs
Tutorial/Kod/Kodpaket till studenterna/Avsnitt 2/: ComplexNumbers.hs  LTI.hs
Tutorial/Kod/Kodpaket till studenterna/Komplexa tal & Signaler/: ComplexNumbers.hs  Signals.hs
Tutorial/Kod/Kodpaket till studenterna/LTI/: ComplexNumbers.hs  LTI.hs  Signals.hs
Tutorial/LTI/: Test.hs
Tutorial/Text/: Avsnitt 1.tex  Avsnitt 2.tex  Avsnitt0.tex  Avsnitt1.tex  Avsnitt2.tex  Avsnitt2_jassob.tex  Avsnitt3.tex  Fourier.tex  LTI.tex  ZTransform.tex
Tutorial/Text/images/: diskretisering.eps  shiftedHeavy.eps  smoothie.eps
anteckningar/: Reflection of Communicating Mathematics  Teaching Math More Effectively, Through Calculational Proofs.md  communicating_mathematics.md  fowler_on_dsls.md
arkiv/: DSLsofMath_andra_kurser.md  README.md  github-konton.md  welcome.md
