name:                Tutorial
version:             0.2.0.0
synopsis:            TODO: fill in some text
description:         Please see README.md
homepage:            https://github.com/DSLsofMath/BScProj#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     ComplexNumbers, ComplexNumbers.Parse, ComplexNumbers.Test,
                       LTI
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DSLsofMath/BScProj
