name:                Tutorial
version:             0.2.0.0
synopsis:            Code used in the programming-oriented tutorial created for
                     students taking signals and system course at
                     Chalmers University of Technology.
description:         Please see README.md
homepage:            https://github.com/DSLsofMath/BScProj#readme
author:              Bachelor team of the DSLsOfMath project @ Chalmers
maintainer:          jassob@dtek.se
copyright:           2016 DSLsofMath Bachelor team
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     ComplexNumbers, ComplexNumbers.Parse, ComplexNumbers.Test,
                       LTI
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DSLsofMath/BScProj
